apps/landing/fleet/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniia-landing
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: uniia-landing
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
