apps/landing/fleet/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uniia-landing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.uniia.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uniia-landing
            port:
              number: 80
  tls:
  - hosts:
    - app.uniia.io
    secretName: uniia-prod-tls-cert
